fix: name the sidecars a round could not read, and set the test heap from a measurement
Two issues that share a symptom: something the build knew and did not say.

#592 - a sidecar written by a newer VibeTags than the one compiling, or held
open by a parallel build, is skipped and never deleted. That is right; deleting
it would lose the module for good. But the skip was announced only at DEBUG, so
the module vanished from CLAUDE.md and from the granular rule files with nothing
said, and the developer met it as an unexplained diff. This is the same
disappearance as #590 reached from the other direction, and the newer-format
direction cannot be prevented from here: the round that drops the regions
belongs to the OLDER processor, which no change we ship can reach.

So the round states it. ModuleSidecar.unreadableSidecarNames() lists the
sidecars present on disk that this processor could not read, and the compiler
warns, names them, and says both that nothing was deleted and that building with
one version throughout brings the regions back. A warning rather than an error:
the output is stale, not wrong, and failing a consumer's compile over a
sibling's temporary file lock would be worse than the diff this explains.

Deliberately not the other fix #592 offered - having the merge decline to drop a
region it cannot read. That needs the existing file threaded into the write
path, and shipping it in the same release as the fix for a write-path bug is not
a trade worth making. #592 stays open for it.

#588 - the 2g test-worker heap was headroom. Now measured: full -Pe2e suite
under -Xlog:gc, 16-core Windows machine, JDK 21, 77 GC events, no full GCs, peak
live set 543 MB, peak occupancy 769 MB, G1 growing the heap to 875 MB and never
approaching the 2048 MB cap. So 2g is about 2.7x peak occupancy and Gradle's
512 MB default sat BELOW it, which is also the first real evidence for the
explanation in #586. docs/TESTS.md records the method and the caveat that CI
runs Linux; the b